fix alignment issues

--- a/starter-code/styles/index.css
+++ b/starter-code/styles/index.css
@@ -481,13 +481,13 @@ body {
   background-image: url(/assets/home/background-home-mobile.jpg);
 }
 
-@media (min-width: 35em) {
+@media (min-width: 35rem) {
   .home {
     background-image: url(/assets/home/background-home-tablet.jpg);
   }
 }
 
-@media (min-width: 45em) {
+@media (min-width: 45rem) {
   .home {
     background-image: url(/assets/home/background-home-desktop.jpg);
   }
@@ -505,8 +505,9 @@ body {
   padding-bottom: 3rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
+  outline: 3px solid limegreen;
 }
 
 .numbered-title {
@@ -544,6 +545,22 @@ body {
   margin-top: 2.5rem;
 }
 
+.destination-meta p {
+  font-size: 1.75rem;
+}
+
+@media (min-width: 35em) {
+  .numbered-title {
+    justify-self: start;
+    margin-top: 2rem;
+  }
+
+  .destination-meta {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
 @media (min-width: 45em) {
   .grid-container {
     text-align: left;
@@ -554,16 +571,33 @@ body {
       );
   }
 
-  .grid-container > *:first-child {
-    grid-column: 2;
-  }
-
-  .grid-container > *:last-child {
-    grid-column: 3;
-  }
-
   .grid-container--home {
     padding-bottom: max(6rem, 20vh);
     align-items: end;
+  }
+
+  .grid-container--home > *:first-child {
+    grid-column: 2;
+  }
+
+  .grid-container--home > *:last-child {
+    grid-column: 3;
+  }
+
+  .grid-container--destination {
+    justify-items: start;
+    align-content: start;
+    grid-template-areas:
+      ". title title ."
+      ". image tabs ."
+      ". image content .";
+  }
+  .grid-container--destination > img {
+    max-width: 90%;
+  }
+
+  .destination-meta {
+    --gap: min(8vw, 6rem);
+    justify-content: start;
   }
 }
